# portfolio

./: .cursorrules  .gitignore  cv.html  effects.js  effectsV2.js  index.html  jsconfig.json  liste a faire.txt  main.css  main.html  mainClear.css  mainV2.css  projects.html  projet1.html  projet2.html  projet3.html  projet4.html  projet5.html  projet6.html  projet7.html  trucafaire
.github/: copilot-instructions.md  instructions-jeu-light-again.md  instructions-portfolio.md
css/: light-again.css  modals.css  music-player.css  perso-projects.css  rain.css  skills.css  styles.css  typing-game-ai.css  typing-game-intro.css  typing-game.css  visualizer.css
desktop/: .gitignore  build-dist.ps1  make-icon.js  package-lock.json  package.json  preview-server.js
desktop/launcher/: desktop-cursor.js  desktop-overrides.css  i18n-shim.js  index.html
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: lib.rs  main.rs
js/: data.js  i18n.js  light-again.js  light-game.js  main.js  music-player.js  particles.js  perso-projects.js  project-covers.js  rain-engine.js  rain-worker.js  rain.js  typing-game-ai.js  typing-game-i18n.js  typing-game-intro.js  typing-game.js  typing-texts.js  visualizer.js
js/light-again/: anomaly.js  boss-arrow.js  boss-hint.js  cache-zone.js  collisions.js  combat.js  constants.js  curse-fountain.js  data-highways.js  digital-tree.js  dimension.js  drone.js  effects.js  enemies.js  game-over-ui.js  gamepad.js  giga-bruiser.js  greed-zone.js  lootlocker.js  (+19 more)
worker/: gemini-proxy.js
