[package]
name = "light-again"
version = "1.0.0"
description = "Light Again — a neon top-down action arena"
authors = ["Paolo Colombat"]
edition = "2021"
rust-version = "1.77.2"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
