[package]
name = "light-again"
version = "1.0.0"
description = "Light Again — a neon top-down action arena"
authors = ["Paolo Colombat"]
edition = "2021"
rust-version = "1.77.2"

# Tauri 2 mobile compiles the app as a LIBRARY (the Android/iOS entry point links
# against this lib via `cargo build --lib`). The desktop binary (main.rs) just
# calls into it, so both targets share one code path.
[lib]
name = "light_again_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
